{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 26,
  "lineage": "60453271-4d73-f48b-9628-1eb3cffceaf9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b669e68b3d3e5081",
            "arn": "arn:aws:ec2:us-east-1:505361048053:elastic-ip/eipalloc-0b669e68b3d3e5081",
            "association_id": "eipassoc-035180f0f5c3149ac",
            "domain": "vpc",
            "id": "eipalloc-0b669e68b3d3e5081",
            "network_border_group": "us-east-1",
            "network_interface": "eni-062cfd9916b1b4a41",
            "private_dns": "ip-10-0-1-5.ec2.internal",
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-3-224-79-211.compute-1.amazonaws.com",
            "public_ip": "3.224.79.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-fase1-nat-eip"
            },
            "tags_all": {
              "Name": "devops-fase1-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:internet-gateway/igw-07929d03de635eeac",
            "id": "igw-07929d03de635eeac",
            "owner_id": "505361048053",
            "tags": {
              "Name": "devops-fase1-igw"
            },
            "tags_all": {
              "Name": "devops-fase1-igw"
            },
            "vpc_id": "vpc-06ce5586d0a790f7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b669e68b3d3e5081",
            "association_id": "eipassoc-035180f0f5c3149ac",
            "connectivity_type": "public",
            "id": "nat-0df51b41b0634ef09",
            "network_interface_id": "eni-062cfd9916b1b4a41",
            "private_ip": "10.0.1.5",
            "public_ip": "3.224.79.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b6d2786ec5bdd4d2",
            "tags": {
              "Name": "devops-fase1-nat-gateway"
            },
            "tags_all": {
              "Name": "devops-fase1-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:route-table/rtb-0ae25912cbc41e2a6",
            "id": "rtb-0ae25912cbc41e2a6",
            "owner_id": "505361048053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0df51b41b0634ef09",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-fase1-private-route-table"
            },
            "tags_all": {
              "Name": "devops-fase1-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ce5586d0a790f7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:route-table/rtb-03a1443183f09c788",
            "id": "rtb-03a1443183f09c788",
            "owner_id": "505361048053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07929d03de635eeac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-fase1-public-route-table"
            },
            "tags_all": {
              "Name": "devops-fase1-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ce5586d0a790f7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0012dd46b3b8e3dd9",
            "route_table_id": "rtb-0ae25912cbc41e2a6",
            "subnet_id": "subnet-0edd968d3c0bc3467"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0696b4bebc68279db",
            "route_table_id": "rtb-0ae25912cbc41e2a6",
            "subnet_id": "subnet-05f65d35149229ef7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abbce87827bf608c",
            "route_table_id": "rtb-03a1443183f09c788",
            "subnet_id": "subnet-0b6d2786ec5bdd4d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0475f71689539a953",
            "route_table_id": "rtb-03a1443183f09c788",
            "subnet_id": "subnet-088d9a47c65576ef3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:security-group/sg-02777fe052b350a5b",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02777fe052b350a5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-fase1-ecs-sg",
            "name_prefix": "",
            "owner_id": "505361048053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-fase1-ecs-sg"
            },
            "tags_all": {
              "Name": "devops-fase1-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ce5586d0a790f7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:security-group/sg-0b92b242555d1eebb",
            "description": "Security group for RDS instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b92b242555d1eebb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02777fe052b350a5b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "devops-fase1-rds-sg",
            "name_prefix": "",
            "owner_id": "505361048053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-fase1-rds-sg"
            },
            "tags_all": {
              "Name": "devops-fase1-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ce5586d0a790f7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:subnet/subnet-0edd968d3c0bc3467",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edd968d3c0bc3467",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505361048053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-fase1-private-subnet-1"
            },
            "tags_all": {
              "Name": "devops-fase1-private-subnet-1"
            },
            "vpc_id": "vpc-06ce5586d0a790f7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:subnet/subnet-05f65d35149229ef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f65d35149229ef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505361048053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-fase1-private-subnet-2"
            },
            "tags_all": {
              "Name": "devops-fase1-private-subnet-2"
            },
            "vpc_id": "vpc-06ce5586d0a790f7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:subnet/subnet-0b6d2786ec5bdd4d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6d2786ec5bdd4d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "505361048053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-fase1-public-subnet-1"
            },
            "tags_all": {
              "Name": "devops-fase1-public-subnet-1"
            },
            "vpc_id": "vpc-06ce5586d0a790f7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:subnet/subnet-088d9a47c65576ef3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088d9a47c65576ef3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "505361048053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-fase1-public-subnet-2"
            },
            "tags_all": {
              "Name": "devops-fase1-public-subnet-2"
            },
            "vpc_id": "vpc-06ce5586d0a790f7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505361048053:vpc/vpc-06ce5586d0a790f7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04e45650e1c386ad1",
            "default_route_table_id": "rtb-029a3bbb31f936dd7",
            "default_security_group_id": "sg-0952088043d6f6e76",
            "dhcp_options_id": "dopt-009a1e1004cc6e675",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ce5586d0a790f7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029a3bbb31f936dd7",
            "owner_id": "505361048053",
            "tags": {
              "Name": "devops-fase1-vpc"
            },
            "tags_all": {
              "Name": "devops-fase1-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}